<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daurenzg.betstars.account.SettingsActivity" >

    <Switch
        android:id="@+id/switchPush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:paddingRight = "20dp"
        android:text="@string/settings_push" />

    <TextView
        android:id="@+id/txtSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtChangePswd"
        android:layout_below="@+id/txtChangePswd"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/settings_sign_out" />

    <TextView
        android:id="@+id/txtChangePswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switchPush"
        android:layout_below="@+id/switchPush"
        android:layout_marginTop="20dp"
        android:text="@string/settings_change_pswd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
